update library imports; reset splits

--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -43,7 +43,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split, cross_val_score"
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.preprocessing import StandardScaler, FunctionTransformer\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "\n",
+    "from sklearn.svm import LinearSVC, SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(824)"
    ]
   },
   {
@@ -2171,7 +2188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=.33, random_state=24)"
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=.33, random_state=824)"
    ]
   },
   {
