--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +49,15 @@
     "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "\n",
+    "from sklearn.tree import plot_tree, DecisionTreeClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier, ExtraTreesClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier, GradientBoostingClassifier, VotingClassifier\n",
     "from sklearn.svm import LinearSVC, SVC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2154,7 @@
        "5          Jump Shot          Jump Shot            244  20000012  34.0553   -145    -11 -118.4148                  9       3         0  2000-01                 32             14  2PT Field Goal           Left Side(L)        Mid-Range         8-16 ft.  1610612747  Los Angeles Lakers  2000-10-31  LAL @ POR      POR        6            Jump                       5              2           Left Side(L)           Mid-Range                   12"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2164,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2173,7 +2174,7 @@
        "array([0., 1.])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2184,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2193,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2203,7 @@
        "((17216, 30), (17216,))"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2213,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2222,7 +2223,7 @@
        "((8481, 30), (8481,))"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
