save preprocessed data for EDA

--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Preprocessing and Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Basic Imports"
    ]
   },
@@ -39,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +59,9 @@
     "from sklearn.tree import plot_tree, DecisionTreeClassifier\n",
     "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier, ExtraTreesClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier, GradientBoostingClassifier, VotingClassifier\n",
-    "from sklearn.svm import LinearSVC, SVC"
+    "from sklearn.svm import LinearSVC, SVC\n",
+    "\n",
+    "import pickle"
    ]
   },
   {
@@ -1898,6 +1907,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save them to CSV files for EDA\n",
+    "# train.to_csv('preprocessed-data/pre_train.csv', index=False)\n",
+    "# test.to_csv('preprocessed-data/pre_test.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2230,6 +2257,13 @@
    ],
    "source": [
     "X_val.shape, y_val.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Selection"
    ]
   },
   {
