add dummy columns

--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -2121,6 +2121,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function will help select columns that need to be dummified\n",
+    "to_dummy = list(train[features1].select_dtypes(include='object'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2414,8 +2424,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mo"
+    "# Models"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
