complete rf on f3

--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -4994,16 +4994,106 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 60 candidates, totalling 300 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   49.7s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:  1.4min\n"
+     ]
+    }
+   ],
    "source": [
+    "# Feature set 3\n",
     "rf = RandomForestClassifier(random_state=824)\n",
     "\n",
-    "params = {\n",
-    "    'n_estimators':[75, 100, 125],\n",
-    "    'max_features': [None, 'auto'],\n",
-    "    'max_depth': [2, 3, None, 5, 6]\n",
-    "}"
+    "params2 = {\n",
+    "    'n_estimators':[100, 125,150],\n",
+    "    'max_depth': [None,3,4, 5, 6],\n",
+    "    'max_features':['auto','log2'],\n",
+    "    'min_samples_leaf':[1,2]\n",
+    "}\n",
+    "\n",
+    "gs2 = GridSearchCV(rf,param_grid=params2, n_jobs=4, cv=5, verbose=1)\n",
+    "gs2.fit(X_train, y_train)\n",
+    "\n",
+    "print(gs2.best_params_)\n",
+    "print('Train Score', gs2.score(X_train, y_train))\n",
+    "print('Val Score', gs2.score(X_val, y_val))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5685840707964602"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_preds2 = gs2.predict(X_val)\n",
+    "f1_score(y_val, val_preds2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate preds on the real test set\n",
+    "test_preds2 = gs.predict(test1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['shot_made_flag'] = test_preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub = test[['shot_id','shot_made_flag']]\n",
+    "sub.to_csv('submissions/sub4.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AdaBoosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
