finish fourth model, sub4

--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -4992,7 +4992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -5008,7 +5008,17 @@
      "text": [
       "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
       "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   49.7s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:  1.4min\n"
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:  1.4min\n",
+      "[Parallel(n_jobs=4)]: Done 300 out of 300 | elapsed:  1.8min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': None, 'max_features': 'log2', 'min_samples_leaf': 2, 'n_estimators': 150}\n",
+      "Train Score 0.7527881040892194\n",
+      "Val Score 0.678103997170145\n"
      ]
     }
    ],
@@ -5054,7 +5064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5064,7 +5074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5073,7 +5083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
