set up ada boost model

--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -5103,7 +5103,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ada = AdaBoostClassifier(base_estimator=DecisionTreeClassifier())\n",
+    "\n",
+    "ada_params = {\n",
+    "    'n_estimators':[50,100,150,],\n",
+    "    'learning_rate':[0.9,0.1,.95,.85],\n",
+    "    'base_estimator__max_depth': [1,2,3]\n",
+    "}\n",
+    "\n",
+    "gs3 = GridSearchCV(ada, param_grid=ada_params, cv=3)\n",
+    "gs3.fit(X_train, y_train)\n",
+    "\n",
+    "# Scores\n",
+    "print(gs3.best_params_)\n",
+    "print('Train Score', gs3.score(X_train, y_train))\n",
+    "print('Val Score', gs3.score(X_val, y_val))"
+   ]
   }
  ],
  "metadata": {
