--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2122,7 +2122,8 @@
     "feature2 = ['loc_x','loc_y','minutes_remaining','period','playoffs','seconds_remaining','shot_distance',\n",
     "            'opponent', 'shot_zone_area','shot_zone_basic']\n",
     "feature3 = ['action_type','combined_shot_type','loc_x','loc_y','period','playoffs','season','shot_type_NUM',\n",
-    "            'matchup','shot_zone_area','shot_zone_basic','shot_zone_range','opponent']"
+    "            'matchup','shot_zone_area','shot_zone_basic','shot_zone_range','opponent']\n",
+    "feature4 = []"
    ]
   },
   {
@@ -4992,7 +4993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -5007,7 +5008,18 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   52.7s\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   52.7s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:  1.4min\n",
+      "[Parallel(n_jobs=4)]: Done 300 out of 300 | elapsed:  1.8min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': None, 'max_features': 'log2', 'min_samples_leaf': 2, 'n_estimators': 150}\n",
+      "Train Score 0.7527881040892194\n",
+      "Val Score 0.678103997170145\n"
      ]
     }
    ],
@@ -5032,9 +5044,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5685840707964602"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val_preds2 = gs2.predict(X_val)\n",
     "f1_score(y_val, val_preds2)"
@@ -5042,7 +5065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5052,7 +5075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5061,12 +5084,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "sub = test[['shot_id','shot_made_flag']]\n",
     "sub.to_csv('submissions/sub4.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>feature_importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>action_type_Jump Shot</td>\n",
+       "      <td>0.0996658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>loc_y</td>\n",
+       "      <td>0.0910879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>loc_x</td>\n",
+       "      <td>0.079088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>period</td>\n",
+       "      <td>0.0378491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>combined_shot_type_Dunk</td>\n",
+       "      <td>0.0296405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>action_type_Layup Shot</td>\n",
+       "      <td>0.0269106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>combined_shot_type_Jump Shot</td>\n",
+       "      <td>0.0267452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>action_type_Driving Layup Shot</td>\n",
+       "      <td>0.023166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>action_type_Running Jump Shot</td>\n",
+       "      <td>0.0204794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>shot_zone_basic_Restricted Area</td>\n",
+       "      <td>0.0165499</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            features feature_importance\n",
+       "26             action_type_Jump Shot          0.0996658\n",
+       "1                              loc_y          0.0910879\n",
+       "0                              loc_x           0.079088\n",
+       "2                             period          0.0378491\n",
+       "51           combined_shot_type_Dunk          0.0296405\n",
+       "27            action_type_Layup Shot          0.0269106\n",
+       "53      combined_shot_type_Jump Shot          0.0267452\n",
+       "13    action_type_Driving Layup Shot           0.023166\n",
+       "39     action_type_Running Jump Shot          0.0204794\n",
+       "157  shot_zone_basic_Restricted Area          0.0165499"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_features_rf = pd.DataFrame([train1.columns, gs2.best_estimator_.feature_importances_]).T\n",
+    "best_features_rf.rename(columns={0:'features',1:'feature_importance'}, inplace=True)\n",
+    "best_features_rf.sort_values('feature_importance', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These features were the most influential coefficients in the random forest model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pickle Random Forest Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pickle model\n",
+    "pickle.dump(gs2, open('assets/rf1_model.pkl', 'wb+'))\n",
+    "# pickle train and test split data, train1\n",
+    "pickle.dump(train1, open('assets/train1f3.pkl', 'wb+'))\n",
+    "pickle.dump(test1, open('assets/test1f3.pkl', 'wb+'))\n",
+    "\n",
+    "pickle.dump(X_train, open('assets/X_trainf3.pkl', 'wb+'))\n",
+    "pickle.dump(X_val, open('assets/X_valf3.pkl', 'wb+'))\n",
+    "pickle.dump(y_train, open('assets/y_trainf3.pkl', 'wb+'))\n",
+    "pickle.dump(y_val, open('assets/y_valf3.pkl', 'wb+'))"
    ]
   },
   {
@@ -5078,21 +5243,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 36 candidates, totalling 108 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 108 out of 108 | elapsed:  5.6min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'base_estimator__max_depth': 1, 'base_estimator__min_samples_leaf': 2, 'learning_rate': 0.95, 'n_estimators': 100}\n",
+      "Train Score 0.6847699814126395\n",
+      "Val Score 0.6770428015564203\n"
+     ]
+    }
+   ],
    "source": [
     "# feature 3\n",
     "ada = AdaBoostClassifier(base_estimator=DecisionTreeClassifier())\n",
     "\n",
     "ada_params = {\n",
     "    'n_estimators':[50,100,150],\n",
-    "    'learning_rate':[0.9,0.1,.95,.85],\n",
-    "    'base_estimator__max_depth': [1,2,],\n",
-    "    'base_estimator__min_samples_leaf':[1,2,]\n",
+    "    'learning_rate':[0.9,0.1,.95],\n",
+    "    'base_estimator__max_depth': [1,2],\n",
+    "    'base_estimator__min_samples_leaf':[1,2]\n",
     "}\n",
     "\n",
-    "gs3 = GridSearchCV(ada, param_grid=ada_params, cv=5, verbose=1)\n",
+    "gs3 = GridSearchCV(ada, param_grid=ada_params, cv=3, verbose=1)\n",
     "gs3.fit(X_train, y_train)\n",
     "\n",
     "# Scores\n",
@@ -5103,9 +5293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5584394647751089"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val_preds3 = gs3.predict(X_val)\n",
     "f1_score(y_val, val_preds3)"
@@ -5113,7 +5314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5124,13 +5325,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "sub = test[['shot_id','shot_made_flag']]\n",
     "sub.to_csv('submissions/sub5.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
