pickle best ada model

--- a/for-kobe.ipynb
+++ b/for-kobe.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,10 +57,9 @@
     "from sklearn.metrics import f1_score\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import plot_tree, DecisionTreeClassifier\n",
-    "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier, ExtraTreesClassifier\n",
-    "from sklearn.ensemble import AdaBoostClassifier, GradientBoostingClassifier, VotingClassifier\n",
-    "from sklearn.svm import LinearSVC, SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
     "\n",
     "import pickle"
    ]
@@ -4899,7 +4898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -4928,7 +4927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4937,7 +4936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -4946,13 +4945,33 @@
        "0.556797925781883"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "f1_score(y_val, val_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.677514444051409"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_val, val_preds)"
    ]
   },
   {
@@ -5061,6 +5080,26 @@
    "source": [
     "val_preds2 = gs2.predict(X_val)\n",
     "f1_score(y_val, val_preds2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.678103997170145"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_val, val_preds2)"
    ]
   },
   {
@@ -5282,7 +5321,7 @@
     "    'base_estimator__min_samples_leaf':[1,2]\n",
     "}\n",
     "\n",
-    "gs3 = GridSearchCV(ada, param_grid=ada_params, cv=3, verbose=1)\n",
+    "gs3 = GridSearchCV(ada, param_grid=ada_params, cv=3, n_jobs=4, verbose=1)\n",
     "gs3.fit(X_train, y_train)\n",
     "\n",
     "# Scores\n",
@@ -5314,11 +5353,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6770428015564203"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_val, val_preds3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate preds on the real test set\n",
+    "accuracy_scorealculate preds on the real test set\n",
     "test_preds3 = gs3.predict(test1)\n",
     "test['shot_made_flag'] = test_preds3"
    ]
@@ -5331,6 +5390,132 @@
    "source": [
     "sub = test[['shot_id','shot_made_flag']]\n",
     "sub.to_csv('submissions/sub5.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pickles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(gs3, open('assets/ada_model.pkl', 'wb+'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>feature_importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>loc_y</td>\n",
+       "      <td>0.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>loc_x</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>action_type_Jump Shot</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>action_type_Running Jump Shot</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>period</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>matchup_LAL @ GSW</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>matchup_LAL vs. IND</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>opponent_NJN</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>action_type_Slam Dunk Shot</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>action_type_Step Back Jump shot</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            features feature_importance\n",
+       "1                              loc_y               0.19\n",
+       "0                              loc_x               0.15\n",
+       "26             action_type_Jump Shot               0.02\n",
+       "39     action_type_Running Jump Shot               0.02\n",
+       "2                             period               0.02\n",
+       "84                 matchup_LAL @ GSW               0.01\n",
+       "123              matchup_LAL vs. IND               0.01\n",
+       "179                     opponent_NJN               0.01\n",
+       "44        action_type_Slam Dunk Shot               0.01\n",
+       "45   action_type_Step Back Jump shot               0.01"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_features_ada = pd.DataFrame([train1.columns, gs3.best_estimator_.feature_importances_]).T\n",
+    "best_features_ada.rename(columns={0:'features',1:'feature_importance'}, inplace=True)\n",
+    "best_features_ada.sort_values('feature_importance', ascending=False).head(10)"
    ]
   },
   {
